# maskfusion

./: README.md  build.sh
Core/: CMakeLists.txt  Callbacks.h  Ferns.cpp  Ferns.h  FrameData.cpp  FrameData.h  GPUTexture.cpp  GPUTexture.h  MaskFusion.cpp  MaskFusion.h
Core/Cuda/: convenience.cuh  cudafuncs.cu  cudafuncs.cuh  operators.cuh  reduce.cu  segmentation.cu  segmentation.cuh  types.cuh
Core/Cuda/containers/: device_array.hpp  device_array_impl.hpp  device_memory.cpp  device_memory.hpp  device_memory_impl.hpp  kernel_containers.hpp
Core/Model/: Buffers.h  Deformation.cpp  Deformation.h  GlobalProjection.cpp  GlobalProjection.h  Model.cpp  Model.h  ModelMatching.h  ModelProjection.cpp  ModelProjection.h
Core/Segmentation/: CfSegmentation.cpp  ConnectedLabels.hpp  MfSegmentation.cpp  PreSegmentation.cpp  Segmentation.cpp  Segmentation.h  SegmentationPerformer.h  SegmentationResult.h  Slic.cpp  Slic.h
Core/Segmentation/MaskRCNN/: MaskRCNN.cpp
Core/Shaders/: ComputePack.cpp
Core/Utils/: BoundingBox.h  CholeskyDecomp.cpp  CholeskyDecomp.h  DeformationGraph.h  GPUConfig.h  GraphNode.h  Img.h  Intrinsics.h  Jacobian.h  OdometryProvider.h  OrderedJacobianRow.h  RGBDOdometry.cpp  RGBDOdometry.h  Stopwatch.h
GUI/: MainController.cpp
